force-app/main/default/objects/Activity/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <label>Call Time</label>
    <type>Time</type>
</CustomField>