force-app/main/default/objects/Activity/fields/desc__c.field-meta.xml
<CustomField>
    <fullName>desc__c</fullName>
    <label>desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>