force-app/main/default/objects/Activity/fields/Event_Result__c.field-meta.xml
<CustomField>
    <fullName>Event_Result__c</fullName>
    <label>Event Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>