force-app/main/default/objects/Activity/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>